--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -1,8 +1,33 @@
-body {
+/* body {
   padding: 50px;
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
 }
 
 a {
   color: #00B7FF;
+} */
+
+.timeline > li > .image-badge {
+  width: 50px;
+  height: 50px;
+  line-height: 50px;
+  font-size: 1.4em;
+  text-align: center;
+  position: absolute;
+  top: 16px;
+  left: 50%;
+  margin-left: -25px;
+  z-index: 100;
+  border-top-right-radius: 50%;
+  border-top-left-radius: 50%;
+  border-bottom-right-radius: 50%;
+  border-bottom-left-radius: 50%;
+}
+
+@media (max-width: 767px) {
+  ul.timeline > li > .image-badge {
+    left: 15px;
+    margin-left: 0;
+    top: 16px;
+  }
 }
